--- a/marblecutter.ini
+++ b/marblecutter.ini
@@ -1,8 +1,8 @@
 [uwsgi]
-wsgi-file = server.py
+wsgi-file = /opt/marblecutter/server.py
 callable = app
 
-socket = :8000
+socket = 0.0.0.0:8000
 buffer-size=32768
 chmod-socket = 664
 
